# Naxus

./: .gitignore  Here is the full PRD and UIUX specification for your app.md  README.md
nexus-app/: index.html  package-lock.json  package.json
nexus-app/src/: App.css  App.tsx  main.tsx
nexus-app/src-tauri/: Cargo.toml  tauri.conf.json
nexus-app/src-tauri/icons/: icon.icns
nexus-app/src-tauri/src/: lib.rs  semantic_ops.rs
nexus-daemon/: package-lock.json  package.json  tsconfig.json
nexus-daemon/src/: index.ts
nexus-ide/: package.json
nexus-ide/browser-app/: gen-webpack.config.js  gen-webpack.node.config.js  package.json
nexus-ide/nexus-agent-extension/: package.json  tsconfig.json
nexus-pageindex/: main.py  requirements.txt  setup.sh  start.sh
nexus-python/: build.sh  main.py
nexus-python/claw/: executor.py  safety.py
nexus-python/mcp_host/: mcp_api.py  server_manager.py
nexus-python/memory/: mem0_client.py  memory_api.py
nexus-python/network/: playwright_scraper.py  web_proxy.py
nexus-python/rag/: indexer.py  rag_api.py
nexus-python/vision/: capturer.py
nexus-todo-test/: index.html
stitch_nexus_launcher_void 2/nexus_agent_profile_dark_glass/: code.html
stitch_nexus_launcher_void 2/nexus_agent_profile_dark_glass_v2/: code.html
stitch_nexus_launcher_void 2/nexus_command_center_dark_glass/: code.html
stitch_nexus_launcher_void 2/nexus_command_center_dark_glass_v2/: code.html
stitch_nexus_launcher_void 2/nexus_ide_dark_glass/: code.html
stitch_nexus_launcher_void 2/nexus_ide_dark_glass_v2/: code.html
(+167 files in other folders)
