[package]
name = "nexus-app"
version = "0.1.0"
description = "NEXUS AI Operating System"
authors = ["Siddharth Jaiswal"]
edition = "2021"

[lib]
name = "nexus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"
notify = "8.2.0"
tokio = { version = "1.50.0", features = ["full"] }
